<resources>
    <string name="app_name" translatable="false">Story App</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="login">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="password_error">Password harus lebih dari 6 karakter</string>
    <string name="email_error">Format email salah</string>
    <string name="logout">Keluar</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="description">Deskripsi</string>
    <string name="upload">Unggah</string>
    <string name="empty">Kosong</string>
    <string name="title_activity_detail_story">Detail Cerita</string>
    <string name="title_activity_upload_story">Unggah Cerita</string>
    <string name="title_activity_change_language">Ubah Bahasa</string>
    <string name="permission_message">Tidak mendapatkan izin</string>
    <string name="title_activity_maps">Peta</string>
    <string name="maps_empty_stories_message">Tidak ada cerita yang bisa ditampilkan</string>
</resources>