<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upload_story.UploadStoryActivity">

    <ImageView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toStartOf="@id/btnGallery"
        app:layout_constraintStart_toStartOf="@id/preview"
        app:layout_constraintTop_toBottomOf="@id/preview" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="@id/preview"
        app:layout_constraintStart_toEndOf="@id/btnCamera"
        app:layout_constraintTop_toBottomOf="@id/preview" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/preview"
        app:layout_constraintStart_toStartOf="@id/preview"
        app:layout_constraintTop_toBottomOf="@id/btnCamera">

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:maxLines="7"
            android:scrollbars="vertical"
            android:gravity="top|start"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.example.submissionintermediate.ui.custom_view.CustomButton
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/preview"
        app:layout_constraintEnd_toEndOf="@id/preview"
        app:layout_constraintTop_toBottomOf="@id/tilDescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>